tests/NormalTests/paczka1/fuzzy1/94486058.err
Error in line 1: A843 A843 21,5
Error in line 5: A843 S825 94,6
Error in line 9: hRb15i4RPjQ A570 28,2
Error in line 15: vI6NBFpbtoh A570 85,6
Error in line 22: hp3v A843 -2,3
Error in line 26: vI6NBFpbtoh A843 319,6
Error in line 17: aCV8TPg3 A73 113,2
Error in line 18: hp3v A843 28,2
Error in line 33: hp3v A73 33,1
Error in line 34: hp3v A843 29,0
Error in line 38: hp3v S825 70,3
Error in line 39: hp3v A570 47,0
